# crabtype.rs

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/letter/: class.rs  style.css  view.rs
src/components/options/: buttons.rs  buttons_props.rs  mod.rs  state.rs  style.css  view.rs
src/components/restart_button/: style.css  view.rs
src/components/settings/: language.rs  mod.rs  state.rs  view.rs
src/components/timer/: style.css  view.rs
src/components/typing/: event_listener.rs  mod.rs  style.css  view.rs  word_data.rs
src/components/typing/words_state/: event_listener.rs  mod.rs  state.rs  words_action.rs  write_action.rs
src/components/word/: class.rs  mod.rs  style.css  view.rs
src/components/word_button/: style.css  view.rs
src/components/word_radio_buttons/: view.rs
src/components/word_toggle_button/: view.rs
src/components/words_container/: mod.rs  row.rs  rows.rs  style.css  view.rs
src/fetch/: words.rs
src/global_state/: mod.rs  options_action.rs  options_state.rs  state.rs  structure_state.rs  timer_action.rs  typing_state.rs  words_action.rs  write_action.rs
