[package]
name = "crabtype2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = { version="0.10.1", features=["yew"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.59", features=["HtmlInputElement", "DomRect"]}
gloo = "0.8.0"
itertools = "0.10.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = "1.0.144"
chrono = "0.4.22"
yew-hooks = "0.1.56"
anyhow = "1.0.65"